[CXO-9086] [CXO-9513] fix saving default service key value